# To be released:

- `ChannelResponse.watchers` is an array of User now

# 1.15.1 - Thu 28 Aug 2020

- New MapAdapter that omit key that contains null values or emptyMaps
- Null-Check over Watchers response

# 1.15.0 - Thu 20 Aug 2020

- Refactor ChatEvents Structure

# 1.14.0 - Thu 20 Aug 2020

- Decouple cloud messages handler logic from configuration data
- Fix createChannel methods

# 1.13.3 - Tue 18 Aug 2020

- Set message as optional when updating a channel

# 1.13.2 - Fri 14 Aug 2020

- Reduce TLS Latency

# 1.13.1 - Fri 7 Aug 2020

- Fix DateParser

# 1.13.0 - Tue 28 Jul 2020

- Add `Client.flagUser()` method to flag an User
- Add `Client.flagMessage()` method to flag a Message
- Deprecated method `Client.flag()` because was a bit confusing, you should use `client.flagUser()` instead

# 1.12.3 - Mon 27 Jul 2020

- Fix NPE on TokenManagerImpl
- Upgrade Kotlin to version 1.3.72
- Add Kotlin Proguard Rules

# 1.12.2 - Fri 17 Jul 2020

- Add customer proguard rules

# 1.12.1 - Wed 15 Jul 2020

- Add customer proguard rules

# 1.12.0 - Mon 06 Jul 2020

- Add mute and unmute methods to channel controller

# 1.11.0 - Mon 06 Jul 2020

- Fix message mentioned users

# 1.10.0 - Wed 29 June 2020

- Add mute and unmute channels
- Add `notification.channel_mutes_updated` socket even handling
- Add user.channelMutes field
- Improve error logging
- Add invalid date format handling (channel.config dates might be invalid)

# 1.9.3 - Wed 29 June 2020

- Add raw socket events logging. See with tag `Chat:Events`

# 1.9.2 - Wed 24 June 2020

- Add `show_in_channel` attribute to `Message` entity

# 1.9.1 - Mue 23 June 2020

- Fix multithreaded date parsing

# 1.9.0 - Mon 22 June 2020

- Fix search message request body
🚨 Breaking change:
- client.searchMessages signature has been changed: query removed, added channel filter

# 1.8.1 - Thu 18 June 2020

- Fix UTC date for sync endpoint
- Fix inhered events parsing
- Fix custom url setter of ChatClient.Builder
